--- a/unsubscribe.html
+++ b/unsubscribe.html
@@ -9,6 +9,6 @@
   <body>
     <div id="root"></div>
     <!-- <script type="module" src="/src/pages/unsub/UnSub.tsx"></script> -->
-    <script type="module" src="'/src/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
