trying to change the home page

--- a/schedule.html
+++ b/schedule.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta property="og:title" content="Sync with Kevin Bradon" />
+    <meta property="og:description" content="Book a time to sync with Kevin using StingSync." />
     <link rel="icon" href="/bee.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StingSync | Sync with Kevin Bradon</title>
